...
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/txt_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_meal_title"
                android:layout_marginTop="10dp"
                android:hint="@string/recipe"
                android:inputType="textCapSentences|textMultiLine"/>

            <EditText
                android:id="@+id/txt_number_of_servings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_recipe"
                android:layout_marginTop="10dp"
                android:hint="@string/number_of_servings"
                android:inputType="number"/>
...
